--- a/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.html
@@ -8,11 +8,11 @@
 </div>
 
   </div>
-  
+
 
   <div class="content">
     <h2 class="part-name">{{ part.name }}</h2>
-
+    <p class="part-description">{{ part.description }}</p>
 
     <div class="store-name">
       🏪 {{ part.storeName || 'متجر غير معروف' }}
