--- a/Fekrah/API/ClientApp/src/app/core/features/home/car-brands/car-brands.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/car-brands/car-brands.component.html
@@ -1,5 +1,5 @@
 <div class="brand-section">
-  <h2>تسوق قطع غيار سيارتك الآن</h2>
+  <h2>أختر موديل السيارة</h2>
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide" *ngFor="let brand of carBrands">
