--- a/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
@@ -166,16 +166,24 @@
 }
 
 .offer-description {
-  color: var(--secondary);
+  font-size: 13px;
   font-weight: 500;
-  font-size: 0.8rem;
-  line-height: 1.4;
-  height: 3.4rem;
+  color: #2c2c2c;
+  line-height: 1.6;
+  text-align: center;
+
+  background: linear-gradient(to right, #fddbdb, #f3d157);
+
+  padding: 3px 10px;
+  border-radius: 12px;
+  margin-bottom: 10px;
+
+  height: 65px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin-bottom: 0.5rem !important;
+  text-overflow: ellipsis;
 }
 
 .price-section {
