--- a/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.html
@@ -25,7 +25,7 @@
         </select>
       </div>
 
-      <div class="filter-group price-filter">
+      <!-- <div class="filter-group price-filter">
         <label for="priceFilter">نطاق السعر</label>
         <select id="priceFilter" [(ngModel)]="selectedPrice" (change)="applyFilters()" (focus)="onSelectFocus($event)"
           (blur)="onSelectBlur($event)">
@@ -35,16 +35,9 @@
           <option value="1000-2000">1000 - 2000 ج.م</option>
           <option value="gt2000">أكثر من 2000 ج.م</option>
         </select>
-      </div>
+      </div> -->
 
-      <div class="filter-group category-filter">
-        <label for="categoryFilter">فئة القطعة</label>
-        <select id="categoryFilter" [(ngModel)]="selectedCategory" (change)="applyFilters()"
-          (focus)="onSelectFocus($event)" (blur)="onSelectBlur($event)">
-          <option value="all">جميع الفئات</option>
-          <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
-        </select>
-      </div>
+
 
       <!-- إضافة فلتر موديل السيارة إلى واجهة HTML -->
       <div class="filter-group model-filter">
@@ -68,6 +61,16 @@
           <option *ngFor="let year of modelYears" [value]="year">{{ year }}</option>
         </select>
       </div>
+
+      <div class="filter-group category-filter">
+        <label for="categoryFilter">فئة القطعة</label>
+        <select id="categoryFilter" [(ngModel)]="selectedCategory" (change)="applyFilters()"
+          (focus)="onSelectFocus($event)" (blur)="onSelectBlur($event)">
+          <option value="all">جميع الفئات</option>
+          <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
+        </select>
+      </div>
+
     </div>
   </div>
 
