--- a/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.scss
@@ -275,7 +275,7 @@ $box-shadow-heavy: 0 20px 40px rgba(118, 75, 162, 0.3);
     color: $primary-color;
     font-size: 12px;
     pointer-events: none;
-    transition: $transition-fast;
+    // transition: $transition-fast;
     transform: rotate(0deg);
   }
 
