--- a/Fekrah/API/ClientApp/src/app/core/features/home/part-types/part-types.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/part-types/part-types.component.html
@@ -2,15 +2,17 @@
   <h2>ابحث حسب نوع القطعة</h2>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" *ngFor="let part of partTypes" (click)="selectPart(part.name)">
+      <div class="swiper-slide" *ngFor="let part of partTypes" (click)="selectPart(part.name)" style="width: 400px;">
         <div class="part-type-card">
-          <div class="icon">{{ part.icon }}</div>
+          <div class="icon">
+            <img [src]="part.imageUrl" [alt]="part.name" class="part-image" />
+          </div>
           <p>{{ part.name }}</p>
         </div>
       </div>
     </div>
     <div class="swiper-pagination"></div>
-    <!-- <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div> -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
 </div>
